--- a/app/templates/admin_pages/notifications_gestion.html
+++ b/app/templates/admin_pages/notifications_gestion.html
@@ -18,7 +18,10 @@
                     <td>{{notification.id_notification}} </td> 
                     <td>{{notification.date_notif}} {{notification.date_notif}}</td> 
                     <td>{{notification.type}}  </td> 
-                    <td><button>Supprimer</button><button>Editer</button></td>
+                    <td class="actions">
+                        <a href="">Supprimer</a>
+                        <a href="">Editer</a>
+                    </td>
                 </tr>
 
                 {% endfor %}
