--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,6 +1,6 @@
-{% extends 'app/templates/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
-{% block title %} User Profile {% endblock title %}
+{% block title %} Profile utilisateur {% endblock title %}
 {% block block_css %}
 <style>
     header .inner2 {
