--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -149,10 +149,10 @@ header .inner1 .log img {
 header .inner1 .menu {
     border-radius: var(--main-border-radius);
     box-shadow: var(--main-shadow);
-    width: 200px;
+    width: fit-content;
     position: absolute;
     right: 0;
-    top: 45px;
+    top: 55px;
     background-color: #fff;
     z-index: 999;
 }
@@ -162,30 +162,34 @@ header .inner1 .log:hover {
 }
 
 header .inner1 .menu ul {
-    width: 100%;
-    padding-block: 10px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 10px;
+    height: fit-content;
 }
 
 header .inner1 .menu ul li {
     width: 100%;
     list-style: none;
-    padding-left: 15px;
     display: inline-block;
-    padding-inline: 25px;
 }
 
 header .inner1 .menu ul li a {
+    display: inline-block;
     color: var(--main-gray);
     text-decoration: none;
+    padding: 10px 20px;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--main-border-radius);
 }
 
 header .inner1 .menu ul li a:hover {
-    text-decoration: underline;
+    background-color: var(--second-underline);
+    color: #000;
 }
-
 
 header .inner1 .menu ul li:nth-child(2) {
     border-bottom: 1px solid rgb(148, 147, 147);
