--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>Authentification admin</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     body {
@@ -60,9 +62,32 @@
     }
 
     .head {
-        text-align: center;
         margin: 24px 0 12px 0;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .head h1 {
+        color: var(--main--green);
+        font-weight: 500;
+    }
+
+    .head .logo {
+        position: relative;
+    }
+
+    .head .logo img {
+        width: 200px;
+        heigth: 200px;
+    }
+
+    .head .logo i {
+        position: absolute;
+        top: 0;
+        right: -10px;
     }
 
     img.avatar {
@@ -163,6 +188,7 @@
             width: 100%;
         }
     }
+ 
 </style>
 </head>
 <body>
@@ -172,7 +198,11 @@
     <p style="color: red;">{{ error_message }}</p>
     {% endif %}
     <div class="head">
-        <h1>Authentification admin</h3>
+        <div class="logo">
+            <img src="{% static 'assets/travelMor-logo-black.png' %}" alt="LOGO TRAVEL MOR">
+            <i class="fa fa-spin fa-gear"></i>
+        </div>
+        <h1>Authentification admin</h1>
     </div>
     <div class="container-login">
         <input type="email" placeholder="Entrer votre email.." name="email" required>
