adding user/notification and link between them

--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -21,6 +21,7 @@
                 <li><a href="{% url "dashboard_gestion" %}"><i class="fa fa-bar-chart"></i></i></i>Dashboard</a></li>
                 <li><a href="{% url "voyages_gestion" %}"><i class="fa-solid fa-person-walking-luggage"></i></i>Voyages</a></li>
                 <li><a href="{% url "hotels_gestion" %}"><i class="fa fa-building"></i>Hotels</a></li>
+                <li><a href="{% url "utilisateurs_gestion" %}"><i class="fa fa-building"></i>Utilisateurs</a></li>
                 <li><a href="{% url "promotions_gestion" %}"><i class="fa fa-percent"></i>Promotions</a></li>
                 <li><a href="{% url "vols_gestion" %}"><i class="fa-solid fa-plane-departure"></i>Vols</a></li>
                 <li><a href="{% url "notifications_gestion" %}"><i class="fa fa-bell"></i>Notifications</a></li>
